fixed overlapping nav bar dropdown problem with z-index

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -35,6 +35,7 @@
   left: 0;
   margin-top: 80px;
   margin-bottom: 25px;
+  z-index: -1;
 }
 
 /* CONTENT */
